[package]
name = "money_streaming"
version = "0.1.0"
edition = "2018"
readme = "README.md"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "1.6.10"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1.0.21"
arrayref = "0.3.6"
spl-token = {version = "3.1.0", features = ["no-entrypoint"]}

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "1.6.10"
solana-program-test = "1.6.10"
solana-validator = "1.6.10"

[lib]
crate-type = ["cdylib", "lib"]