[package]
name = "money_streaming"
version = "0.8.0"
edition = "2018"
readme = "README.md"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "1.8.5"
num-derive = "0.3"
num-traits = "0.2.14"
thiserror = "1.0.21"
arrayref = "0.3.6"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = "1.0.2"

[dev-dependencies]
assert_matches = "1.4.0"
solana-sdk = "1.8.5"
solana-program-test = "1.8.5"
solana-validator = "1.8.5"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true