[package]
name = "ddca"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "ddca"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[net]
git-fetch-with-cli = true

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
solana-program = "=1.7.11"
hybrid-liquidity-ag = { path = "../../../hybrid-liquidity-ag/programs/hla", features = ["cpi"], version = "0.1.0" }
