[package]
name = "hla"
version = "0.1.0"
description = "Hybrid Liquidity Aggregator"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "hla"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.17.0"
anchor-spl = "0.17.0"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
stable-swap-anchor = { version = "1.4.4" }